fix: update dark theme active color for better visibility

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -14,7 +14,7 @@ $defaultTheme: (
   dark: (
     color: #eeeeee,
     background: #1e1e1e,
-    active-color: #686dff,
+    active-color: #9fa3ff,
     em-bg-color: #131600,
     strong-color: #dddd00,
     name: 'dark',
